// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubscriptionObservable methods subscribe primus.write fail should not subscribe and error 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "primus-graphql": Object {
          "id": "payloadId",
          "operationName": "operationName",
          "query": "query",
          "variables": Object {
            "input_0": Object {
              "var1": "foo",
            },
          },
        },
      },
    ],
    Array [
      Object {
        "primus-graphql": Object {
          "event": "unsubscribe",
          "id": "payloadId",
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": false,
    },
    Object {
      "isThrow": false,
      "value": false,
    },
  ],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write fail should not subscribe and error 2`] = `
Object {
  "onComplete": [MockFunction],
  "onError": [MockFunction] {
    "calls": Array [
      Array [
        [Error: primus-graphql: write failed],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
  "onNext": [MockFunction],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write success should subscribe 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "primus-graphql": Object {
          "id": "payloadId",
          "operationName": "operationName",
          "query": "query",
          "variables": Object {
            "input_0": Object {
              "var1": "foo",
            },
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": true,
    },
  ],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write success subscribed reconnect should resend subscription with reconnect var 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "primus-graphql": Object {
          "id": "payloadId",
          "operationName": "operationName",
          "query": "query",
          "variables": Object {
            "input_0": Object {
              "var1": "foo",
            },
          },
        },
      },
    ],
    Array [
      Object {
        "primus-graphql": Object {
          "id": "payloadId",
          "operationName": "operationName",
          "query": "query",
          "variables": Object {
            "input_0": Object {
              "var1": "foo",
            },
          },
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": true,
    },
    Object {
      "isThrow": false,
      "value": true,
    },
  ],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write success subscribed should receive complete 1`] = `
Object {
  "onComplete": [MockFunction] {
    "calls": Array [
      Array [],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
  "onError": [MockFunction],
  "onNext": [MockFunction],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write success subscribed should receive error 1`] = `
Object {
  "onComplete": [MockFunction],
  "onError": [MockFunction] {
    "calls": Array [
      Array [
        [Error: boom],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
  "onNext": [MockFunction],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write success subscribed should receive nested multiple errors 1`] = `
Object {
  "onComplete": [MockFunction],
  "onError": [MockFunction] {
    "calls": Array [
      Array [
        [Error: multiple errors],
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
  "onNext": [MockFunction],
}
`;

exports[`SubscriptionObservable methods subscribe primus.write success subscribed should receive next 1`] = `
Object {
  "onComplete": [MockFunction],
  "onError": [MockFunction],
  "onNext": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "data": "nextData",
        },
      ],
    ],
    "results": Array [
      Object {
        "isThrow": false,
        "value": undefined,
      },
    ],
  },
}
`;
